[package]
name = "graph-sparsifier"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = """
A graph sparsifier based on an approximated PageRank algorithm.
"""
repository = "https://github.com/TimeExceed/graph-sparsifier"
readme = "README.md"
categories = ["algorithms"]
keywords = ["graph", "sparsifier"]

[[bench]]
name = "benches"
harness = false

[dependencies]
ahash = "0.8.11"
algograph = "0.4.0"
keyed_priority_queue = "0.4.2"

[dev-dependencies]
criterion = "0.5"
mimalloc = "0.1.43"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.9.0"
